--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -1,6 +1,6 @@
 allprojects{
     repositories {
-        def REPOSITORY_URL = 'http://maven.aliyun.com/nexus/content/groups/public/'
+        def REPOSITORY_URL = 'https://maven.aliyun.com/repository/public'
         all { ArtifactRepository repo ->
             def url = repo.url.toString()
             if ((repo instanceof MavenArtifactRepository) && (url.startsWith('https://repo1.maven.org/maven2') || url.startsWith('https://jcenter.bintray.com'))) {
